Changed package name from controller to affinity Signed-off-by: Katrina LaCurts <katrina.lacurts@plexxi.com>