@@ -2,64 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-<!--  <parent>
-    <groupId>org.opendaylight.controller</groupId>
-    <artifactId>affinity</artifactId>
-    <version>1.4.0-SNAPSHOT</version>
-  </parent> -->
+  <parent>
+    <groupId>org.opendaylight.affinity</groupId>
+    <artifactId>affinityParent</artifactId>
+    <version>0.4.1-SNAPSHOT</version>
+    <relativePath>../..</relativePath>
+  </parent>
 
-  <groupId>org.opendaylight.controller.affinity</groupId> 
-  <artifactId>northbound</artifactId>
+  <groupId>org.opendaylight.affinity</groupId> 
+  <artifactId>affinity.northbound</artifactId>
   <version>0.4.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
-      <properties>
-	<propertymavenplugin.version>1.0-alpha-2</propertymavenplugin.version>
-	<sonar.host.url>https://sonar.opendaylight.org/</sonar.host.url>
-	<sitedeploy>dav:http://nexus.opendaylight.org/content/sites/site</sitedeploy>
-	<siteplugin>3.2</siteplugin>
-	<projectinfo>2.6</projectinfo>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<compiler.version>2.3.2</compiler.version>
-	<surefire.version>2.15</surefire.version>
-	<failsafe.version>2.15</failsafe.version>
-	<exam.version>3.0.0</exam.version>
-	<url.version>1.5.0</url.version>
-	<enunciate.version>1.26.2</enunciate.version>
-	<sonar.branch>${user.name}-private-view</sonar.branch>
-	<sonar.skippedModules>org.openflow.openflowj,net.sf.jung2</sonar.skippedModules>
-	<logback.version>1.0.9</logback.version>
-	<slf4j.version>1.7.2</slf4j.version>
-	<jackson.version>1.9.8</jackson.version>
-	<spring.version>3.1.3.RELEASE</spring.version>
-	<spring-security.version>3.1.3.RELEASE</spring-security.version>
-	<jersey.version>1.17</jersey.version>
-	<virgo.version>3.6.0.RELEASE</virgo.version>
-	<geminiweb.version>2.2.0.RELEASE</geminiweb.version>
-	<checkstyle.version>2.10</checkstyle.version>
-	<testvm.argLine>-Xmx1024m -XX:MaxPermSize=256m</testvm.argLine>
-	<nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
-      </properties>
-
-    <repositories>
-    <!-- OpenDayLight Snapshot artifact -->
-    <repository>
-      <id>opendaylight-snapshot</id>
-      <name>opendaylight-snapshot</name>
-      <url>${nexusproxy}/repositories/opendaylight.snapshot/</url>
-    </repository>
-    </repositories>
-  <distributionManagement>
-    <!-- OpenDayLight Snapshot artifact -->
-    <snapshotRepository>
-      <id>opendaylight-snapshot</id>
-      <url>${nexusproxy}/repositories/opendaylight.snapshot/</url>
-    </snapshotRepository>
-    <!-- Site deployment -->
-    <site>
-      <id>website</id>
-      <url>${sitedeploy}</url>
-    </site>
-  </distributionManagement>
 
   <build>
     <plugins>
@@ -78,7 +31,6 @@
           </dependency>
         </dependencies>
       </plugin>
-
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
@@ -90,7 +42,7 @@
               org.opendaylight.controller.sal.core,
               org.opendaylight.controller.sal.utils,
               org.opendaylight.controller.containermanager,
-              org.opendaylight.controller.affinity,
+              org.opendaylight.affinity.affinity,
               org.opendaylight.controller.usermanager,
               org.apache.commons.lang3.tuple,
               org.apache.commons.logging,
@@ -107,9 +59,9 @@
               !org.codehaus.enunciate.jaxrs
             </Import-Package>
 	    <Export-Package>
-              org.opendaylight.controller.affinity.northbound
+              org.opendaylight.affinity.affinity.northbound
 	    </Export-Package>
-            <Web-ContextPath>/controller/nb/v2/affinity</Web-ContextPath>
+            <Web-ContextPath>/affinity/nb/v2/affinity</Web-ContextPath>
           </instructions>
           <manifestLocation>${project.basedir}/src/main/resources/META-INF</manifestLocation>
         </configuration>
@@ -122,44 +74,36 @@
       <artifactId>com.sun.jersey.jersey-servlet</artifactId>
       <version>1.17-SNAPSHOT</version>
     </dependency>
-
     <dependency>
-      <groupId>org.opendaylight.controller</groupId>
+      <groupId>org.opendaylight.affinity</groupId>
       <artifactId>affinity</artifactId>
       <version>0.4.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>containermanager</artifactId>
       <version>0.4.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>sal</artifactId>
       <version>0.5.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>commons.northbound</artifactId>
       <version>0.4.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>${spring.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>org.codehaus.enunciate</groupId>
       <artifactId>enunciate-core-annotations</artifactId>
       <version>${enunciate.version}</version>
     </dependency>
-
   </dependencies>
-
 </project>
